@@ -44,6 +44,7 @@ Changelog
  * Fix: Explorer menu no longer scrolls with page content (Vincent Audebert)
  * Fix: `decorate_urlpatterns` now uses `functools.update_wrapper` to keep view names and docstrings (Mario César)
  * Fix: StreamField block controls are no longer hidden by the StreamField menu when prepending a new block (Vincent Audebert)
+ * Fix: Removed invalid use of `__` alias that prevented strings getting picked up for translation (Juha Yrjölä)
 
 
 1.4.4 (xx.xx.2016)
